Segunda aula de EDA

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .Rhistory
 .Rapp.history
 
+*html
+*Rproj
+
 # Session Data files
 .RData
 
@@ -31,3 +34,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+.Rproj.user
